<?xml version="1.0"?>
<package format="3">
  <name>auto_mapping_system</name>
  <version>0.0.1</version>
  <description>TurtleBot3 automatic mapping system for Physical AI final project</description>
  <maintainer email="kohkenyamamo10@gmail.com">nicejp</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_cartographer</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
